--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body{
   font-size:19px;
     }
 .container{
-    margin-left: 20px;
-    display:flex;
-    justify-content: space-between;
+   margin-left: 20px;
+    display:flex;  justify-content: space-around;
 }
 
 .container-1{
@@ -16,8 +15,18 @@ display: flex;
 flex-direction:column;
   }
 
+.lable_image{
+  position:relative;
+  left:30px;
+  top:30px;
+  margin:0 30px 30px 0;
+}
 
+.lable_image img{
+  width:64px;
+  height:64px;
 
+}
 .color-square{
   float: left;
  border-radius:5px;
