--- a/style/cards.css
+++ b/style/cards.css
@@ -5,7 +5,6 @@ body{
   font-size:12px;
   background-color: #E5E5E5;
   color: #1F2041;
-
   font-weight: bold;
 }
 
@@ -16,7 +15,8 @@ body{
 }
 
 .container-1{
-  border-radius: 2px;
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 3px;
   padding: 30px;
   background-color:white ;
   display: flex;
@@ -25,15 +25,53 @@ body{
 
 }
 
+.container-1 p{
+font-family: 'Quicksand', sans-serif;
+font-size: 24px;
+text-transform: inherit;
+}
+
 .container-1_dates{
+line-height: 25px;
+text-transform: uppercase;
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
 margin-bottom: 20px;
 }
 
-.container-1 p{
-font-family: 'Quicksand', sans-serif;
-font-size: 24px;
-text-transform: inherit;
+.container-1_dates input{
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  border:1px solid #E5E5E5;
+  width: auto;
+  height: 35px;
+  border-radius: 3px;
+}
+
+.container-1_input-guests{
+line-height: 25px;
+text-transform: uppercase;
+
+margin-bottom: 20px;
+}
+
+
+.container-1_input-guests select{
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  border:1px solid #E5E5E5;
+  width: 100%;
+  height: 35px;
+  border-radius: 3px;
+}
+
+.container-1_button{
+  border-radius: 20px;
+  height:40px;
+  border:none;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
