--- a/style/cards.css
+++ b/style/cards.css
@@ -8,8 +8,23 @@ body{
   font-weight: bold;
 }
 
+.header{
+  margin: 10px;
+  margin-bottom:50px;
+
+  width:100%;
+  display: flex;
+  justify-content: flex-start;
+  }
+
+  .lable_image{
+    display: flex;
+  }
+
 .container{
   display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
   /*justify-content: space-around;*/
 }
 
@@ -25,6 +40,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
 
 }
 
