--- a/style/cards.css
+++ b/style/cards.css
@@ -241,3 +241,54 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
   font-weight:bold;
   background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
+
+.calendar{
+  font-weight: normal;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.calendar-title, .week{
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.day{
+  color: rgba(31, 32, 65, 0.5);
+  border-radius: 50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+}
+
+.day:hover{
+  color: white;
+  background:linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);*/
+  width: 40px;
+  height: 40px;
+}
+
+
+.day-of-week{
+  border-radius: 50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  color: #BC9CFF;
+  text-transform: capitalize;
+  font-weight: bold;
+
+}
+
+
+.grey{
+  color:rgba(31, 32, 65, 0.25);
+;
+}
