--- a/style/cards.css
+++ b/style/cards.css
@@ -287,8 +287,16 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
 
 }
 
+.checked{
+  background-color: pink;
+}
+
+.mchecked{
+  background-color: pink;
+  opacity: 0.5;
+  border-radius: 0;
+}
 
 .grey{
   color:rgba(31, 32, 65, 0.25);
-;
 }
