--- a/style/cards.css
+++ b/style/cards.css
@@ -231,15 +231,25 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
   width:100%;
 }
 .form-2_button{
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  line-height: 30px;
+  text-align: center;
+  /*vertical-align: middle;*/
   width:90%;
   border-radius: 20px;
-  height:40px;
+  height:30px;
   border:none;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   color:white;
   font-weight:bold;
   background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+}
+
+.form-2_button img{
+  align-self: center;
 }
 
 .calendar{
@@ -288,15 +298,29 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
 }
 
 .checked{
-  background-color: pink;
+  background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
 
 .mchecked{
-  background-color: pink;
+  background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
   opacity: 0.5;
   border-radius: 0;
 }
 
 .grey{
   color:rgba(31, 32, 65, 0.25);
+  background: white;
+}
+
+.grey:hover{
+  background: white;
+  color:rgba(31, 32, 65, 0.25);
+}
+
+.firstchecked{
+  border-radius: 50% 0 0 50%;
+}
+
+.secondchecked{
+  border-radius: 0 50% 50% 0 ;
 }
