--- a/style/cards.css
+++ b/style/cards.css
@@ -275,7 +275,7 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
   flex-direction: column;
   justify-content: space-between;
 }
-.calendar-title, .week{
+.days-of-week, .week{
   flex-direction: row;
   display: flex;
   justify-content: space-between;
@@ -368,3 +368,33 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
   top:10px;
   font-size: 20px;
 }
+
+.calendar_header{
+
+
+  display:flex;
+}
+
+.prev_mouth{
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.12);
+  width: 40px;
+  height: 40px;
+
+  margin-right: auto;
+}
+
+.next_mouth{
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.12);
+  width: 40px;
+  height: 40px;
+  margin-left: auto;
+}
+.mouth_name{
+
+ line-height: 40px;
+ font-weight: bold;
+
+ font-family: 'Montserrat', sans-serif;
+
+ font-size: 24px;
+ }
