--- a/style/cards.css
+++ b/style/cards.css
@@ -333,11 +333,11 @@ border-bottom: 0.1em dotted rgba(31, 32, 65, 0.5);
   color:rgba(31, 32, 65, 0.25);
 }
 
-.firstchecked{
+.startchecked{
   border-radius: 50% 0 0 50%;
 }
 
-.secondchecked{
+.finishchecked{
   border-radius: 0 50% 50% 0 ;
 }
 
