--- a/style/cards.css
+++ b/style/cards.css
@@ -414,17 +414,37 @@ height: 50px;}
  }
 
 .slider{
+
   display: flex;
   width: 100%;
   height:50px;
   border:1px solid black;
 }
+.scale{
+  position: relative;
+  background-image: url(src/chart-scale.jpg);
+  width: 100%;
+  height: 100px;
+}
 
 .point{
-  top:-20px;
+  top:58px;
   position: relative;
   width: 30px;
   height: 30px;
   background:linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
   border-radius:50px;
+}
+
+.point_value{
+  line-height: 30px;
+  text-align: center;
+  vertical-align: middle;
+  top:25px;
+  position: absolute;
+  width: 50px;
+  height: 30px;
+  background:pink;
+  border-radius:50px;
+
 }
