--- a/style/cards.css
+++ b/style/cards.css
@@ -33,6 +33,8 @@ select{
   }
 
 .container{
+  flex-wrap: wrap;
+  width: 1400px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -40,7 +42,7 @@ select{
 }
 
 .form{
-  margin: 0 10px;
+  margin:10px auto;
   width: 350px;
   height: auto;
   display: flex;
